Made nav links stay on same tab and fixed footer social icon spacing

--- a/css/main.css
+++ b/css/main.css
@@ -652,6 +652,10 @@ footer p {
   line-height: 1.125em;
 }
 
+footer .social-icons {
+  width: 200px;
+}
+
 footer .copyright {
     width: 100%;
 }
